== Version 2.6.18 Work in progress (not released -- this is a draft) ==


== Version 2.6.17 ==

  Users side :
  ------------
    # The style for notification panel with lots of notifications has been improved.
    # Apps :
        * Recurrents :
            - A crash when you tried to add a filter has been fixed.
            - The Quick-search on the field 'ct' ("Type of the recurrent resource") has been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The job which sends notification emails has been improved to remove line breaks in subject.
          Line breaks were avoiding the mails to be sent.


== Version 2.6.16 ==

  Users side :
  ------------
    # Apps :
        * Creme_config :
            - In configuration for CustomForms, the removing of a fields was broken
              when there is a special group (like "Addresses").
        * Reports :
            - A user needs the permission to export a model in order to export a Report now.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # An issue with 'creme_core.forms.enumerable.EnumerableSelectMultiple' has been fixed;
          in the context, the selected value was handled as a string instead of a list.


== Version 2.6.15 ==

  UPGRADE NOTES :
    - Do not forget to tun the command "generatemedia".

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # Apps :
            * Creme_config :
                - The CSS for 'brick.GenericModelBrick' has been improved when the related model has many fields.


== Version 2.6.14 ==

  Users side :
  ------------
    # You can now see the detail-view of a public EntityFilter which belongs to another user.
      It fixes some issues for Reports with filters too.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------