@@ -1,5 +1,10 @@
 == Version 2.6.18 Work in progress (not released -- this is a draft) ==
 
+  Users side :
+  ------------
+    # The Job scheduler has been fixed: disabling then re-activating a Job was not possible.
+      You were obliged to restart the scheduler.
+
 
 == Version 2.6.17 ==
 
